--- a/bitpop_specific/extensions/facebook_messages/background.html
+++ b/bitpop_specific/extensions/facebook_messages/background.html
@@ -36,6 +36,21 @@
 
       if (request.type == 'myUidAvailable') {
         myUid = request.myUid;
+
+        DesktopNotifications.threads_unseen_before = [];
+        DesktopNotifications.just_connected = true;
+
+        DesktopNotifications.start(current.refreshTime);
+
+      } else if (request.type == 'newMessage') {
+        DesktopNotifications.received_cache.push({ body: request.body,
+                                                   from: request.from,
+                                                   timestamp: new Date()
+                                                   });
+        if (DesktopNotifications.received_cache.length > 50)
+          DesktopNotifications.received_cache.shift();
+      } else if (request.type == 'loggedOut') {
+        DesktopNotifications.just_connected = false;
       }
     });
 
