Mac todos resolved, extensions improvements.
- Version 0.3.12.0
- (mac) changed facebook chat extension icon
- (mac) added fixed extension icons positioning
  with disabled dragging
- (mac) reverted back to not resize window on 
  sidebar show/hide
- (mac) better alignment on newtab page
- (win/mac) resolved scrollbar lag bug
- (win/mac) layout search and logout link to be
  on one line
- (win/mac) notification extension is updated
  right after the /me user id received

--- a/bitpop_specific/extensions/facebook_friends/background.html
+++ b/bitpop_specific/extensions/facebook_friends/background.html
@@ -118,9 +118,12 @@
         }
 
         if (to_ids.length > 1)
-          return;
+          continue;
         var jid = myUid + ':' + to_ids[0].toString();
         localStorage.removeItem(jid);
+
+        if (!data[i].comments || !data[i].comments.data)
+          continue;
 
         for (var j = 0; j < data[i].comments.data.length; j++) {
           bitpop.saveToLocalStorage(myUid, to_ids[0], 
