--- a/bitpop_specific/extensions/facebook_notifications/background.html
+++ b/bitpop_specific/extensions/facebook_notifications/background.html
@@ -29,6 +29,15 @@
     //DesktopNotifications.domain = current.domain;
     DesktopNotifications.controllerExtensionId = current.controllerExtensionId;
     DesktopNotifications.start(current.refreshTime);
+
+    chrome.extension.onRequestExternal.addListener(function (request, sender, sendResponse) {
+      if (!request.type)
+        return;
+
+      if (request.type == 'myUidAvailable') {
+        DesktopNotifications.start(current.refreshTime);
+      }
+    });
   </script>
 </body>
 </html>
