Sync for dropdown extension is working.

--- a/bitpop_specific/extensions/dropdown/background.html
+++ b/bitpop_specific/extensions/dropdown/background.html
@@ -1,156 +1,8 @@
 <html>
 	<head>
-    <script type="text/javascript" src="bookmark.js"></script>
-    <script>
-      function mergeHistory(hist1, hist2) {
-        var res = [];
-        var i, j, k, m, n;
-        i = 0;
-        j = 0;
-        k = 0;
-        m = hist1.length;
-        n = hist2.length;
-        while (i < m && j < n) {
-          if (hist1[i].visitCount >= hist2[j].visitCount) {
-            res[k] = hist1[i];
-            i++;
-          } else {
-            res[k] = hist2[j];
-            j++;
-          }
-          k++;
-        }
-        if (i < m) {
-          for (var p = i; p < m; p++) {
-            res[k] = hist1[p];
-            k++;
-          }
-        } else {
-          for (var p = j; p < n; p++) {
-            res[k] = hist2[p];
-            k++;
-          }
-        }
-        return res;
-      }
-    </script>
-    <script type="text/javascript" src="sync.js"></script>
- 		<script>
- 			//default options
-			if(!localStorage["list_style"]) {
-				localStorage["list_style"] = "double_title_url";
-			}
-
-			if(!localStorage["show_protocol"]) {
-				localStorage["show_protocol"] = "no";
-			}
-
-			if(!localStorage["typed_only"]) {
-				localStorage["typed_only"] = "yes";
-			}
-
-			if(!localStorage["link_num"]) {
-				localStorage["link_num"] = "12";
-			}
-
-			if(!localStorage["primary_color"]) {
-				localStorage["primary_color"] = "#858586";
-			}
-
-			if(!localStorage["secondary_color"]) {
-				localStorage["secondary_color"] = "#A5B7A5";
-			}
-
-			if(!localStorage["hover_color"]) {
-				localStorage["hover_color"] = "#CDE5FF";
-			}
-
-			if(!localStorage["border_color"]) {
-				localStorage["border_color"] = "#F1F8FF";
-			}
-
-			if(!localStorage["background_color"]) {
-				localStorage["background_color"] = "#FFFFFF";
-			}
-
-			if(!localStorage["middle"]) {
-				localStorage["middle"] = "foreground";
-			}
-
-			if(!localStorage["width"]) {
-				localStorage["width"] = "600";
-			}
-
-			if(!localStorage["ignore"]) {
-				localStorage["ignore"] = JSON.stringify(new Array());
-			}
-
-      loadSyncId();
-      attachSyncListeners();
-
-			//first start
-			chrome.tabs.getAllInWindow(null, function(tabs) {
-				for(var i=0;i<tabs.length;i++) {
-					chrome.pageAction.show(tabs[i].id);
-				}
-			});
-
- 			chrome.tabs.onUpdated.addListener(function(tabId, changeInfo, tab) {
- 				if(changeInfo.status == "loading") {
- 					chrome.pageAction.show(tabId);
- 				}
- 			});
-
- 			function readHistory() {
- 				chrome.history.search({text: "", startTime:(new Date()).getTime()-30*24*3600*1000,  endTime: (new Date()).getTime(), maxResults:0}, function(items) {
-	 				items.sort(function(a,b){return b.visitCount - a.visitCount;});
-
-	 				var history = new Array();
-	 				var ignoreList = JSON.parse(localStorage["ignore"]);
-
-	 				for(var i=0;i<items.length;i++) {
-	 					if(history.length < localStorage["link_num"]) {
-	 						if(ignoreList.indexOf(items[i].url.toLowerCase()) == -1) {
-	 							if(localStorage["typed_only"] == "no" || (localStorage["typed_only"] == "yes" && items[i].typedCount > 0)) {
-                  delete items[i].id;
-                  delete items[i].lastVisitTime;
-                  delete items[i].typedCount;
-                  history.push(items[i]);
- 	 							}
-	 							if (localStorage["typed_only"] == "yes" && items[i].typedCount == 0) {
-	 						    chrome.history.getVisits({url:items[i].url}, function(results) {
-	 							    for (var counter in results) {
-                      if (results[counter].transition == 'typed') {
-                        delete items[i].id;
-                        delete items[i].lastVisitTime;
-                        delete items[i].typedCount;
-                        history.push(items[i]);
- 	 							        break;
-	 							      }
-	 							    }
-	 							  });
-	 							}
-	 						}
-	 					} else {
-	 						break;
-	 					}
-	 				}
-
-          if (localStorage.getItem('history')) {
-            history = mergeHistory(history,
-                                   JSON.parse(localStorage.getItem('history')));
-          }
-
-          localStorage["history"] = JSON.stringify(history);
-          saveSyncData(getData());
-	 			});
- 			}
-
- 			readHistory();
- 			setInterval(function() {
-				readHistory();
-			}, 5*60*1000);
- 		</script>
+    <script type="text/javascript" src="js/background.js"></script>
+    <script type="text/javascript" src="js/bookmark.js"></script>
+    <script type="text/javascript" src="js/sync.js"></script>
 	</head>
 	<body>
 	</body>
