--- a/bitpop_specific/extensions/dropdown/popup.html
+++ b/bitpop_specific/extensions/dropdown/popup.html
@@ -4,7 +4,7 @@
 		<style>
 			body {margin:0;padding:0;font-family:Helvetica, Arial, sans-serif;width:600px;font-size:13px;overflow:hidden;}
 		</style>
-		<script src="jquery.js"></script>
+		<script src="js/jquery.js"></script>
 		<script>
 
 			$(document).ready(function(){
@@ -13,7 +13,7 @@
 			});
 
 	 		function displayLinks() {
-	 			var items = JSON.parse(localStorage["history"]);
+	 			var items = chrome.extension.getBackgroundPage().cache.history.get();
  				var displayProtocol = localStorage["show_protocol"] == "yes";
  				var style = localStorage["list_style"];
 
