Extensions bugfix. Browser action positioning fixes.
- version 0.3.12.3
- (ext) reworked dropdown extension (seems to sync properly)
- (ext) problem with login windows solved
- (ext) add error notice while can not connect having a valid access token
- (ext) fixed background page bug in friends extension
- (win) fixed bug with extension button positioning
- (win) increased padding for chatbar

--- a/bitpop_specific/extensions/dropdown_most_visited/popup.html
+++ b/bitpop_specific/extensions/dropdown_most_visited/popup.html
@@ -13,7 +13,7 @@
 			});
 
 	 		function displayLinks() {
-	 			var items = chrome.extension.getBackgroundPage().cache.history.get();
+	 			var items = chrome.extension.getBackgroundPage().cache.options.history;
  				var displayProtocol = localStorage["show_protocol"] == "yes";
  				var style = localStorage["list_style"];
 
@@ -138,7 +138,7 @@
 	 				localStorage["ignore"] = JSON.stringify(ignoreList);
 
 	 				//refresh history
-					chrome.extension.getBackgroundPage().readHistory();
+					chrome.extension.getBackgroundPage().readHistoryAndMergeIn();
 	 			}
 
 	 			return false;
