--- a/bitpop_specific/extensions/dropdown_most_visited/options.html
+++ b/bitpop_specific/extensions/dropdown_most_visited/options.html
@@ -205,7 +205,11 @@
           <legend>Miscellaneous:</legend>
 
           <input type="checkbox" name="should_sync" value="0" id="should_sync">
-          <label for="should_sync" id="should_sync_label">Synchronize URL list (Bookmarks Sync should be enabled in BitPop options)</label><br>
+          <label for="should_sync" id="should_sync_label">Synchronize URL list</label><br>
+          <p><strong>Important!</strong> Enable Google Account sync preference beforehand on
+          <a href="#" onclick="chrome.tabs.create({url:'chrome://settings/personal'});">Personal Settings page</a>
+            <em>with a permission to sync user bookmarks</em> for the sync process to work correctly.
+          </p>
         </fieldset>
 				<br/>
 
