--- a/bitpop_specific/extensions/facebook_friends/background.html
+++ b/bitpop_specific/extensions/facebook_friends/background.html
@@ -122,13 +122,23 @@
         var jid = myUid + ':' + to_ids[0].toString();
         localStorage.removeItem(jid);
 
+        localStorage[jid + '.thread_id'] = data.id;
+
         if (!data[i].comments || !data[i].comments.data)
           continue;
+
+        if (data[i].comments.data.length < 20 && data[i].message) {
+          bitpop.saveToLocalStorage(myUid, to_ids[0],
+              bitpop.preprocessMessageText(data[i].message),
+              0, // leave 0 as a timestamp
+              from_id == myUid
+          );
+        }
 
         for (var j = 0; j < data[i].comments.data.length; j++) {
           bitpop.saveToLocalStorage(myUid, to_ids[0], 
               bitpop.preprocessMessageText(data[i].comments.data[j].message),
-              j, // TODO: set timestamp as required
+              (new Date(data[i].comments.data[j].created_time)).getTime(),
               data[i].comments.data[j].from.id == myUid
           );
         }
