--- a/bitpop_specific/extensions/uncensor_proxy/background.html
+++ b/bitpop_specific/extensions/uncensor_proxy/background.html
@@ -41,6 +41,14 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
     })();
 
     chrome.tabs.onUpdated.addListener(onTabUpdated);
+    chrome.experimental.webRequest.onBeforeRequest.addListener(
+      onBeforeRequestListener,
+      {
+        types: [ "main_frame" ],
+        urls: [ "*://*/*" ]
+      },
+      []
+    );
   }
 
   function updateProxifiedDomains() {
@@ -58,7 +66,7 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
           changed = true;
         } else {
           for (var i = 0; i < domains.length; i++) {
-            if (changed = changed || 
+            if (changed = changed ||
                 domains[i] != old_domains[i].description)
               break;
           }
@@ -106,12 +114,92 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
     var domains = [];
     for (i = 0; i < newDomains.length; i++) {
       var curDomain = newDomains[i];
-      domains.push({ 
+      domains.push({
         description: curDomain,
         value: cachedDomains[curDomain] || 'use_global'
       });
     }
     settings.set('domains', domains);
+  }
+
+  function onBeforeRequestListener(details) {
+    var uri = parseUri(details.url);
+    var domains = settings.get('domains');
+    if (!domains || domains.length == 0)
+      return;
+    for (var i = 0; i < domains.length; i++) {
+      if (uri['host'].endsWith(domains[i].description)) {
+        var proxyControl = null;
+        if (domains[i].value == 'use_global') {
+          proxyControl = settings.get('proxy_control').replace(/"/g, '');
+        }
+        else {
+          proxyControl = domains[i].value;
+        }
+
+        switch (proxyControl) {
+          case 'use_auto': {
+            chrome.tabs.update(details.tabId, {
+                url: navigate(details.url)
+                });
+
+            var updatedListener = function(tabId, changeInfo, tab) {
+              if (changeInfo.status == 'complete' && tabId == details.tabId) {
+                chrome.tabs.insertCSS(tab.id, { file: 'infobar.css' });
+                chrome.tabs.executeScript(tab.id, {
+                  code: 'var bitpop_uncensor_proxy_options = {' +
+                  '  reason: "setJippi" };'
+                }, function() {
+                  chrome.tabs.executeScript(tab.id, { file: 'infobar_script.js' });
+                });
+                chrome.tabs.onUpdated.removeListener(arguments.callee);
+              }
+            };
+
+            chrome.tabs.onUpdated.addListener(updatedListener);
+            chrome.tabs.onRemoved.addListener(function(tabId, removeInfo) {
+              if (tabId == details.tabId) {
+                chrome.tabs.onUpdated.removeListener(updatedListener);
+                chrome.tabs.onRemoved.removeListener(arguments.callee);
+              }
+            });
+          }
+          break;
+
+          case 'never_use':
+            return;  // do nothing
+
+          case 'ask_me': {
+            var updatedListener = function(tabId, changeInfo, tab) {
+              if (changeInfo.status == 'complete' && tabId == details.tabId) {
+                chrome.tabs.insertCSS(tab.id, { file: 'infobar.css' });
+                chrome.tabs.executeScript(tab.id, {
+                  code: 'var bitpop_uncensor_proxy_options = {' +
+                        '  reason: "setAsk",' +
+                        '  url: "' + navigate(details.url) + '",' +
+                        '  country_name: "' + settings.get('country_name') +
+                        '" };'
+                  }, function () {
+                    chrome.tabs.executeScript(tab.id, { file: 'infobar_script.js' });
+                  }
+                );
+                chrome.tabs.onUpdated.removeListener(arguments.callee);
+              }
+            };
+
+            chrome.tabs.onUpdated.addListener(updatedListener);
+            chrome.tabs.onRemoved.addListener(function(tabId, removeInfo) {
+              if (tabId == details.tabId) {
+                chrome.tabs.onUpdated.removeListener(updatedListener);
+                chrome.tabs.onRemoved.removeListener(arguments.callee);
+              }
+            });
+          }
+          break;
+        }
+        break;
+      }
+    }
   }
 
   function onTabUpdated(tabId, changeInfo, tab) {
@@ -165,7 +253,7 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
                 code: 'var bitpop_uncensor_proxy_options = {' +
                       '  reason: "setAsk",' +
                       '  url: "' + navigate(tab, changeInfo.url || tab.url) + '",' +
-                      '  country_name: "' + settings.get('country_name') + 
+                      '  country_name: "' + settings.get('country_name') +
                       '" };'
                 }, function () {
                   chrome.tabs.executeScript(tab.id, { file: 'infobar_script.js' });
@@ -174,6 +262,7 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
             }
             break;
         }
+        break;
       }
     }
   }
@@ -206,16 +295,17 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
   var svc_url_path = '/includes/process.php?action=update&idx=0&u=%url&obfuscation=%hash';
   var proxy_sites_count = getSitesCount();
 
-  function navigate(tab, url_to_hide) {
+  function navigate(url_to_hide) {
     var encoded_url,
         proxy_site,
         svc_url;
-        
+
     if (!checkURLCredibility(url_to_hide)) {
       return;
     }
     encoded_url = encodeURIComponent(url_to_hide); //window.btoa(url_to_hide.substr(4)).replace(/=+$/, '');
-    proxy_site = getRandomSite();
+    //proxy_site = getRandomSite();
+    proxy_site = 'hidemyass.com';
     if (proxy_site == 'hidemyass.com') {
       var server = Math.ceil(5 * Math.random());
       svc_url = 'http://' + server + '.' + proxy_site;
@@ -223,7 +313,7 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
       svc_url = 'http://' + proxy_site;
     }
     svc_url += svc_url_path.replace('%url', encoded_url).replace('%hash', 2);
-    
+
     return svc_url;
   }
 
