--- a/bitpop_specific/extensions/facebook_messages/background.html
+++ b/bitpop_specific/extensions/facebook_messages/background.html
@@ -30,6 +30,25 @@
     DesktopNotifications.controllerExtensionId = current.controllerExtensionId;
     DesktopNotifications.start(current.refreshTime);
 
+    chrome.browserAction.onClicked.addListener(function(tab) {
+      chrome.windows.getCurrent(function(win) {
+
+        chrome.tabs.getAllInWindow(win.id, function(tabs) {
+          var found = false;
+          for (var i = 0; i < tabs.length; i++) {
+            if (tabs[i].url == 'http://www.facebook.com/messages' ||
+                tabs[i].url == 'https://www.facebook.com/messages') {
+              chrome.tabs.update(tabs[i].id, { selected: true });
+              found = true;
+              break;
+            }
+          }
+          if (!found)
+            chrome.tabs.create({ url: "http://www.facebook.com/messages" });
+        });
+      });
+    });
+
     chrome.extension.onRequestExternal.addListener(function (request, sender, sendResponse) {
       if (!request.type)
         return;
