--- a/bitpop_specific/extensions/facebook_messages/popup.html
+++ b/bitpop_specific/extensions/facebook_messages/popup.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/jewel-style.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="css/antiscroll.css" type="text/css" media="screen" charset="utf-8">
   <style type="text/css">
     /*html, body {
       width: 350px;
@@ -20,10 +21,29 @@
       background-repeat:no-repeat;
       background-position: center center;
     }
+
+    #slide-wrap {
+      float: left;
+      width: 350px;
+      overflow:hidden
+    }
+    #inner-wrap {
+      float: left;
+      margin-right: -30000px;
+    }
+    .content-item {
+      float:left;
+      width: 350px;
+    }
+    .antiscroll-inner {
+      width: 350px;
+      height: 240px;
+    }
   </style>
   <script src="js/jquery.min.js"></script>
   <script src="js/options.js"></script>
   <script src="js/humane.js"></script>
+  <script src="js/antiscroll.js"></script>
   <script type="text/javascript" charset="utf-8">
     Array.prototype.contains = function(obj) {
       var i = this.length;
@@ -106,6 +126,22 @@
 
       $('#feed').append(newDom);
 
+      $('#feed .message').each(function() {
+        $(this).click(function() {
+          var curData = ($(this).index() < data.data.length) ? 
+                            data.data[$(this).index()] :
+                            null;
+          if (curData) {
+            slideToThreadView();
+
+            $('#thread .loading').removeClass('loading');
+            $('#thread-feed').empty();
+            $('#thread-feed').append(formatThreadItems(curData));
+            $('.box-wrap').data('antiscroll').rebuild();
+          }
+        });
+      });
+
       var dn = chrome.extension.getBackgroundPage().DesktopNotifications;
       dn.threads_unseen_before = [];
       dn.start(30000);
@@ -159,7 +195,7 @@
       }
 
       var template =
-        "<div class='message unread-{{hasUnread}}' onclick='chrome.tabs.create({ url: \"{{href}}\" })'>" +
+        "<div class='message unread-{{hasUnread}}'>" +
           "<div class='left'>" +
             "<div class='user-photo'>" +
               "<img src='{{photoUrl}}' />" +
@@ -189,9 +225,6 @@
 
       template = template.replace('{{hasUnread}}',
           itemData.unread ? 'true' : 'false');
-      template = template.replace('{{href}}',
-          "https://www.facebook.com/?sk=inbox&action=read&tid=id." +
-          itemData.id.toString());
       template = template.replace('{{photoUrl}}',
           'http://graph.facebook.com/' + notMeUserId.toString() + '/picture?type=square');
       template = template.replace('{{getNameText}}', notMeUserName);
@@ -206,6 +239,81 @@
 
       return template;
     }
+
+    function formatThreadItems(itemData) {
+      console.assert(myUid !== null);
+
+      var template0 =
+        "<div class='message unread-false'>" +
+          "<div class='left'>" +
+            "<div class='user-photo'>" +
+              "<img src='{{photoUrl}}' />" +
+            "</div>" +
+          "</div>" +
+          "<div class='right'>" +
+            "<div class='top'>" +
+              "<div class='user-name'>" +
+                "{{getNameText}}" +
+              "</div>" +
+              "<div class='time-since'>" +
+                "{{time-since}}" +
+              "</div>" +
+            "</div>" +
+            "<div class='bottom'>" +
+              "<div class='snippet'>" +
+                "<b>{{subject}}</b>" +
+                "{{snippet}}" +
+              "</div>" +
+            "</div>" +
+          "</div>" +
+        "</div>";
+
+      var res = '';
+
+      if (!itemData.comments || itemData.comments.data.length == 0) {
+        var template = template0.replace('{{photoUrl}}',
+            'http://graph.facebook.com/' + itemData.from.id.toString() + '/picture?type=square');
+        template = template.replace('{{getNameText}}', itemData.from.name);
+        template = template.replace('{{time-since}}',
+          humane_date(itemData.updated_time));
+        template = template.replace('{{subject}}', '');
+        template = template.replace('{{snippet}}', itemData.message);
+
+        res += template;
+      } else {
+        for (var i = itemData.comments.data.length-1; i >= 0; i--) {
+          var template = template0.replace('{{photoUrl}}',
+              'http://graph.facebook.com/' + itemData.comments.data[i].from.id.toString() + '/picture?type=square');
+          template = template.replace('{{getNameText}}',
+              itemData.comments.data[i].from.name);
+          template = template.replace('{{time-since}}',
+            humane_date(itemData.comments.data[i].created_time));
+          template = template.replace('{{subject}}', '');
+          template = template.replace('{{snippet}}',
+              itemData.comments.data[i].message);
+          
+          res += template;
+        }
+      }
+
+      return res;
+    }
+
+    var slideToThreadView = function(dontAnimate) {
+      if (!dontAnimate)
+        $('#slide-wrap').stop().animate({ scrollLeft: 350 },
+            500);
+      else
+        $('#slide-wrap').stop().scrollLeft(350);
+    };
+
+    var slideToFeedView = function(dontAnimate) {
+      if (!dontAnimate)
+        $('#slide-wrap').stop().animate({ scrollLeft: 0 },
+            500);
+      else
+        $('#slide-wrap').stop().scrollLeft(0);
+    };
   </script>
 </head>
 <body>
@@ -213,9 +321,35 @@
     <div class='title'>Messages</div>
     <div class='action' onclick='chrome.windows.create({ url: "http://www.facebook.com/dialog/send?app_id=190635611002798&redirect_uri=https://www.facebook.com/connect/login_success.html", type: "popup", width: 998, height: 421 })'>Send a New Message</div>
   </div>
-  <div id="feed" class="loading"></div>
+
+  <div id="slide-wrap">
+    <div id="inner-wrap">
+      <div class="content-item">
+        <div id="feed" class="feed loading"></div>
+      </div>
+      <div id="thread" class="content-item">
+        <div class="thread-header">
+          <a href="javascript:slideToFeedView();">Back To Summary</a>
+        </div>
+        <div class="loading">
+          <div class="box-wrap antiscroll-wrap">
+            <div class="box">
+              <div class="antiscroll-inner">
+                <div class="box-inner" id="scrollable-area">
+                  <div id="thread-feed" class="feed"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div id="footer"></div>
   <script type="text/javascript" charset="utf-8">
+
+    $('.box-wrap').antiscroll();
 
     chrome.extension.sendRequest(current.controllerExtensionId,
         {
