--- a/bitpop_specific/extensions/uncensor_proxy/background.html
+++ b/bitpop_specific/extensions/uncensor_proxy/background.html
@@ -148,7 +148,7 @@ Copyright (c) 2012 Crystalnix <vgachkaylo@crystalnix.com>
                 chrome.tabs.insertCSS(tab.id, { file: 'infobar.css' });
                 chrome.tabs.executeScript(tab.id, {
                   code: 'var bitpop_uncensor_proxy_options = {' +
-                  '  reason: "setJippi" };'
+                  '  reason: "setJippi", url: "' + details.url + '" };'
                 }, function() {
                   chrome.tabs.executeScript(tab.id, { file: 'infobar_script.js' });
                 });
