Working (win) release 0.4.16.1. Needs more checking.

--- a/bitpop_specific/extensions/facebook_friends/chat.html
+++ b/bitpop_specific/extensions/facebook_friends/chat.html
@@ -7,6 +7,12 @@
   <script src="js/common.js"></script>
   <script src="js/chat_popup.js"></script>
   <script type="text/javascript">
+    if (location.search !== "?foo") {
+      location.search = "?foo";
+      throw new Error;  // load everything on the next page;
+                            // stop execution on this page
+    }
+
     $(function() {
         bitpop.chat.init();
 
