--- a/bitpop_specific/extensions/facebook_notifications/popup.html
+++ b/bitpop_specific/extensions/facebook_notifications/popup.html
@@ -55,6 +55,7 @@ function showNotifications(data) {
 
       var query1 = data[0].fql_result_set;
       var query2 = data[1].fql_result_set;
+      var query3 = data[2].fql_result_set;
 
       var newDom = '';
 
@@ -74,11 +75,13 @@ function showNotifications(data) {
         newDom += formatFeedItem(query1[i],
                                  findNameForUid(
                                    query1[i].sender_id,
-                                   query2
+                                   query2,
+                                   query3
                                    ),
                                  findPicForUid(
                                    query1[i].sender_id,
-                                   query2
+                                   query2,
+                                   query3
                                    )
                                 );
       }
@@ -111,20 +114,24 @@ function showNotifications(data) {
       }
     }
 
-    function findNameForUid(uid, data) {
+    function findNameForUid(uid, data, page_data) {
       for (var i = 0; i < data.length; i++) {
-        if (data[i].uid.toString() == uid.toString())
+        if (data[i].uid && data[i].uid.toString() == uid.toString() && data[i].name)
           return data[i].name;
+        if (page_data[i].page_id && page_data[i].page_id.toString() == uid.toString() && page_data[i].name)
+          return page_data[i].name;
       }
-      return null;
+      return 'Unknown sender';
     }
 
-    function findPicForUid(uid, data) {
+    function findPicForUid(uid, data, page_data) {
       for (var i = 0; i < data.length; i++) {
-        if (data[i].uid.toString() == uid.toString())
+        if (data[i].uid && data[i].uid.toString() == uid.toString() && data[i].pic_square)
           return data[i].pic_square;
+        if (page_data[i].page_id && page_data[i].page_id.toString() == uid.toString() && page_data[i].pic_square)
+          return page_data[i].pic_square; 
       }
-      return null;
+      return 'https://graph.facebook.com/1/picture?type=square';
     }
 
     function formatFeedItem(itemData, name, pic_url) {
@@ -180,7 +187,11 @@ function showNotifications(data) {
                  'FROM user ' +
                  'WHERE uid IN ' +
                  '(SELECT sender_id FROM #query1)';
-    var query = JSON.stringify({ query1: query1, query2: query2 });
+    var query3 = 'SELECT page_id, name, pic_square ' +
+                 'FROM page ' +
+                 'WHERE page_id IN ' +
+                 '(SELECT sender_id FROM #query1)';
+    var query = JSON.stringify({ query1: query1, query2: query2, query3: query3 });
 
     chrome.extension.sendRequest(current.controllerExtensionId,
         {
