Extension bugfix + adding mybub search
- 1 search button partially working
- friends_sidebar extension bugfixed

--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -38,10 +38,10 @@
     <div id="inner-wrap">
       <div class="content-item" id="chat-content">
         <p id="unavail" style="display:none"></p>
-        <p id="logout"><a href="#">Logout</a></p>
+        <p id="logout"><a href="#" tabIndex="-1">Logout</a></p>
 
         <div id="search-wrap">
-          <input id="search" type="search" placeholder="Search..." name="s" />
+          <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" />
         </div>
 
         <div class="box-wrap antiscroll-wrap">
@@ -57,7 +57,7 @@
         <div id="login-centered">
           <img src="images/facebook_login_bitpop.png" alt="Facebook chat login" />
           <p>Chat with your friends<br />while surfing</p>
-          <button class="btn">Login</button>
+          <button class="btn" tabIndex="-1">Login</button>
           <p class="error" style="display:none">
             The login data is already present. Check your internet connection. You will be connected
             as soon as possible.
